[tool.poetry]
name = "llm-glimpses"
version = "0.1.0"
description = "LLM Glimpses"
authors = ["Xiangzhuang Shen <datahonor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
mkdocs = "^1.5.3"
pre-commit = "^3.5.0"
mkdocs-bibtex = "^2.11.0"
mkdocstrings = "^0.24.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.4.14"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
